--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/jahnestacado/curtainjs/issues"
   },
-  "homepage": "https://github.com/jahnestacado/curtainjs"
+  "homepage": "https://github.com/jahnestacado/curtainjs",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-uglify": "^0.11.0"
+  }
 }
