package.json: Updated package info

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "curtainjs",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A jQuery plugin for adding and controlling curtain-like animated panels in your projects",
-  "main": "js/curtain.js",
+  "main": "js/jquery.curtain.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
