--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "type": "git",
     "url": "https://github.com/jahnestacado/curtainjs"
   },
+  "keywords": [
+    "curtain",
+    "jquery",
+    "animation",
+    "sidebar",
+    "sliding"
+  ],
   "author": "Ioannis Tzanellis <ioannis.tzanellis@aimms.com>",
   "license": "MIT",
   "bugs": {
